--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Altaf's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>We Are</h1>
-    <h1>VENOM</h1>
+    <h1><span class="venom">VENOM</span>!!!</h1>
+    <h3>Black goo ewwww!!!</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, nihil, consectetur fugit harum aliquid incidunt quae rem expedita modi, in earum! Hic aspernatur rem nobis quibusdam eum eligendi nam ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut ipsum aperiam voluptatem, qui aut temporibus dolores exercitationem quae? Id aspernatur totam animi, excepturi minima in dignissimos fugiat expedita. Esse.</p>
+    <img src="images/newproject.png" alt="first pic">
 </body>
 </html>
