--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +11,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>We Are</h1>
-    <h1><span class="venom">VENOM</span>!!!</h1>
-    <h3>Black goo ewwww!!!</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, nihil, consectetur fugit harum aliquid incidunt quae rem expedita modi, in earum! Hic aspernatur rem nobis quibusdam eum eligendi nam ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut ipsum aperiam voluptatem, qui aut temporibus dolores exercitationem quae? Id aspernatur totam animi, excepturi minima in dignissimos fugiat expedita. Esse.</p>
-    <img src="images/newproject.png" alt="first pic">
+    <section class="topbanner">
+        <div class="half">
+            <h1>We Are</h1>
+            <h1><span class="venom">VENOM</span>!!!</h1>
+            <h3>Black goo being afraid of vibrations</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, nihil, consectetur fugit harum
+                aliquidincidunt quae rem expedita modi, in earum! Hic aspernatur rem nobis quibusdam eum eligendi nam
+                ad.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut ipsum aperiam voluptatem, qui aut
+                temporibus dolores exercitationem quae? Id aspernatur totam animi, excepturi minima in dignissimos
+                fugiat
+                expedita.
+                Esse.</p>
+            <a class="linkbutton" target="_blank" href="https://www.linkedin.com/in/altaf-uddin-9729731a0/">Hire Me</a>
+        </div>
+        <div class="half">
+            <img src="images/newproject.png" alt="first pic">
+        </div>
+    </section>
+
 </body>
+
 </html>
