--- a/index.html
+++ b/index.html
@@ -26,13 +26,29 @@
                 fugiat
                 expedita.
                 Esse.</p>
-            <a class="linkbutton" target="_blank" href="https://www.linkedin.com/in/altaf-uddin-9729731a0/">Hire Me</a>
+            <a class="linkbutton" target="_blank" href="https://www.linkedin.com/in/altaf-uddin-9729731a0/">HIRE ME</a>
         </div>
         <div class="half">
             <img src="images/newproject.png" alt="first pic">
         </div>
     </section>
-
+    <section class="carnage">
+        <div class="half">
+            <img src="images/magazine-1-designify.png" alt="me">
+        </div>
+        <div class="half">
+            <h1>Carnage on Rage</h1>
+            <h3>Betrayed by Love</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sapiente officia, quod aspernatur tempore
+                ipsum iure exercitationem nobis non illum autem aliquid eligendi quidem quibusdam id consectetur
+                laboriosam sint! Eaque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium sed
+                perferendis enim placeat. Facilis non perspiciatis quisquam! Maxime iste at ad culpa dolor molestiae,
+                eaque quos vel necessitatibus? Optio ut mollitia beatae quo? Assumenda doloribus tempore illo vel
+                asperiores voluptatibus expedita maiores? Dignissimos quo voluptas sed quod, voluptatibus placeat
+                officia.</p>
+            <a class="linkbutton" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
