--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="topbanner">
+    <section class="topbanner flexiblecontainer">
         <div class="half">
             <h1>We Are</h1>
             <h1><span class="venom">VENOM</span>!!!</h1>
@@ -32,7 +32,7 @@
             <img src="images/newproject.png" alt="first pic">
         </div>
     </section>
-    <section class="carnage">
+    <section class="carnage flexiblecontainer">
         <div class="half">
             <img src="images/magazine-1-designify.png" alt="me">
         </div>
@@ -47,6 +47,44 @@
                 asperiores voluptatibus expedita maiores? Dignissimos quo voluptas sed quod, voluptatibus placeat
                 officia.</p>
             <a class="linkbutton" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="Experience">
+        <h1>Expriences</h1>
+        <div class="flexiblecontainer">
+            <div class="half">
+                <h1>Full Stack Developer</h1>
+                <h3>2019-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt doloremque nisi dignissimos quo,
+                    maiores temporibus pariatur vitae laudantium, sit tempora aspernatur placeat ducimus. Iste amet
+                    minus
+                    quis adipisci illo est, praesentium libero numquam laborum tempora eveniet fugiat voluptas veniam.
+                    In,
+                    perspiciatis provident veritatis nam cum excepturi. Autem ad suscipit, minus dolores repudiandae
+                    laboriosam dignissimos nihil labore itaque qui. Fuga voluptate minus sapiente dicta ea ab at
+                    recusandae
+                    voluptatem illo accusamus corrupti, odit, optio animi labore, reprehenderit error repellendus
+                    eveniet
+                    mollitia. Doloremque repellendus magni, ex similique possimus ipsam saepe recusandae eius alias ad,
+                    ut
+                    aut. Tempore cumque voluptatem voluptatibus aperiam in!</p>
+            </div>
+            <div class="half">
+                <h1>Baby Web Developer</h1>
+                <h3>2022-Present | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, sit quaerat repellendus facilis
+                    expedita
+                    impedit porro corporis commodi, id quas soluta odit quasi cupiditate consequatur unde nihil
+                    accusamus
+                    voluptate voluptatibus, fugit ducimus aliquam ullam! Eius voluptas sunt, tempora molestiae odio qui
+                    blanditiis animi eos atque quas non dolorem iure repudiandae dolores accusantium dolorum sint nemo
+                    earum! Voluptates quasi, aperiam incidunt nobis officiis suscipit eos perspiciatis minus sapiente
+                    ducimus! Quam deleniti quidem cumque suscipit corrupti. Numquam pariatur eligendi velit ipsa
+                    cupiditate
+                    recusandae nulla harum dolore natus sunt. Fugiat natus veniam omnis, sequi itaque incidunt
+                    cupiditate
+                    provident? Adipisci odit distinctio iusto commodi?</p>
+            </div>
         </div>
     </section>
 </body>
