--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <section class="Experience">
         <h1>Expriences</h1>
         <div class="flexiblecontainer">
-            <div class="half">
-                <h1>Full Stack Developer</h1>
-                <h3>2019-Present | Pro Level Developer</h3>
+            <div id="fullstack" class="experienceitem">
+                <h2>Full Stack Developer</h2>
+                <h3 class="venom">2019-Present | Pro Level Developer</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt doloremque nisi dignissimos quo,
                     maiores temporibus pariatur vitae laudantium, sit tempora aspernatur placeat ducimus. Iste amet
                     minus
@@ -69,9 +69,9 @@
                     ut
                     aut. Tempore cumque voluptatem voluptatibus aperiam in!</p>
             </div>
-            <div class="half">
-                <h1>Baby Web Developer</h1>
-                <h3>2022-Present | Programming Hero Learner</h3>
+            <div id="babyweb" class="experienceitem">
+                <h2>Baby Web Developer</h2>
+                <h3 class="venom">2022-Present | Programming Hero Learner</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, sit quaerat repellendus facilis
                     expedita
                     impedit porro corporis commodi, id quas soluta odit quasi cupiditate consequatur unde nihil
