--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Tom Hardy 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
